Adds file manifest to marketplace items
